--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,27 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+    {
+        "type": "chrome",
+        "request": "attach",
+        "name": "Attach to Chrome",
+        "port": 3000,
+        "webRoot": "${workspaceFolder}"
+    },
+		{
             "type": "node",
             "request": "attach",
             "name": "Attach by Process ID",
-            "processId": "${command:PickProcess}"
+            "processId": "${command:PickProcess}",
+            "restart": true,
+            "sourceMaps": true,
+            "protocol": "inspector",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
         }
-    ]
+	]
 }
