--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server",
+    "server": "nodemon --inspect=127.0.0.1:3001 server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server \" \"npm run client \""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "google-maps": "^4.2.3",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
+    "multer": "^1.4.2",
+    "node-sass": "^4.14.0",
     "nodemon": "^1.19.1",
     "request": "^2.88.0"
   },
