--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server",
     "server": "nodemon --inspect=127.0.0.1:3001 server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server \" \"npm run client \""
+    "dev": "concurrently \"npm run server \" \"npm run client \"",
+    "heroku-post-build": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
