--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon --inspect=127.0.0.1:3001 server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server \" \"npm run client \"",
-    "heroku-post-build": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
